# ChickenScratch

./: .gitattributes  .gitignore  2025-10-01-is-there-a-linux-app-that-can-open-the-files-in-th.txt  AGENTS.md  Cargo.toml  DEVLOG.md  GEMINI.md  Gemini-Conversation.json  LICENSE  README.md  RELEASE.md  REVIEW.md  TODO.md  gpt.txt  grok.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/: artifact-manifest.json  decisions.md  harvest.md  repo-guidance.md  repo-map.json  state.md
.agents/review/: index.md
.claude/: settings.local.json
.codex/: hooks.json
.github/workflows/: macos-release.yml  tauri-bundles.yml  validation.yml  windows.yml
.grok/hooks/: reground.json
.review/: README.md
.review/agent-reviews/: cross-frontend.md  frontend-tauri.md  release-native.md  security-core.md
.review/findings/: C-1.md  C-2.md  C-3.md  C-4.md  C-5.md  H-1.md  H-2.md  H-3.md  H-4.md  H-5.md  H-6-followup.md  H-6.md  H-7.md  L-1.md  L-2.md  L-3.md  L-4.md  L-5.md  L-6.md  L-7.md  L-8.md  L-9.md  M-1.md  M-2.md  M-3.md  M-4.md  M-5.md  M-6.md  N-1-followup-settings-dir.md  N-1.md  N-2.md  N-3.md  N-FMT.md  R-1.md  R-10.md  R-11.md  R-12.md  R-13.md  R-14.md  R-15.md  (+23 more)
.review/ready/: H-1.json  H-7.json  M-6.json
.review/results/: C-1.verified.json  C-2.verified.json  C-3.verified.json  C-4.verified.json  C-5.verified.json  H-1.verified.json  H-2.verified.json  H-3.verified.json  H-4.verified.json  H-5.verified.json  H-6-followup.verified.json  H-6.verified.json  H-7.verified.json  L-1.verified.json  L-2.verified.json  L-3.verified.json  L-4.verified.json  L-5.verified.json  L-6.verified.json  L-7.verified.json  L-8.verified.json  L-9.verified.json  M-1.verified.json  M-2.reopened.md  M-2.verified.json  M-3.reopened.md  M-3.verified.json  M-4.reopened.md  M-4.verified.json  M-5.verified.json  M-6.reopened.md  M-6.verified.json  N-1-followup-settings-dir.verified.json  N-1.verified.json  N-2.verified.json  N-3.verified.json  N-FMT.verified.json  R-1.verified.json  R-10.verified.json  R-11.verified.json  (+29 more)
.serena/: project.yml
.serena/memories/: architecture_decisions_final.md  code_review_fixes_complete.md  development_status.md  external_review_insights.md  phase1_week1_complete.md  phase2_import_complete.md  phase3_frontend_started.md  project_vision.md  session_complete_oct4.md  session_end_oct4.md  session_progress.md  session_summary_20251004.md  tauri_api_complete.md  technical_architecture.md
Reviews/: deepseek_review_1.md  gemini_review_1.md  gpt_review_1.md  grok_review_1.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/scrivener/converter/: mod.rs
crates/cli/src/scrivener/exporter/: mod.rs
crates/cli/src/scrivener/parser/: mod.rs  rtf.rs  scrivx.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/core/: compile.rs  git.rs  mod.rs
crates/core/src/core/document/: mod.rs
crates/core/src/core/project/: deletion.rs  fidelity.rs  format.rs  hierarchy.rs  mod.rs  reader.rs  safe_path.rs  writer.rs
crates/core/src/core/snapshots/: create.rs  manifest.rs  restore.rs
crates/core/src/models/: document.rs  hierarchy.rs  mod.rs  project.rs
crates/core/src/scrivener/converter/: mod.rs
crates/core/src/scrivener/exporter/: mod.rs
crates/core/src/scrivener/parser/: mod.rs  rtf.rs  scrivx.rs
crates/core/src/utils/: error.rs  mod.rs  process.rs  slug.rs
crates/core/tests/: compile_roundtrip.rs  cross_frontend_round_trip.rs  format_round_trip.rs  merge_recovery.rs  remote_sync.rs  write_guard.rs
crates/core/tests/cross_frontend/: run.sh
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  convert.rs  main.rs  ui.rs
docs/: AGENT-WORKFLOW.md  AI-TOOLS.md  AI_DEVELOPMENT_GUIDE.md  ANALYSIS_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  CHIKN_FORMAT_SPEC.md  CODE_REVIEW.md  CURRENT_PHASE.md  DEVELOPMENT_SETUP.md  DEVLOG.md  EDITOR_DESIGN.md  FOLDER_FIRST_DOCUMENTS.md  GIT_BACKUP_STRATEGY.md  GPT_Code_Review.md  GTK4_EDITOR_DESIGN.md  HUMAN-GATE.md  INVARIANTS.md  NEXT_SESSION.md  OPEN_QUESTIONS.md  PROJECT.md  PROJECT_ESTIMATES.md  PROJECT_SPECIFICATION.md  PROJECT_STATUS.md  ROADMAP.md  SESSION_NOTES.md  START-HERE.md  SWIFTUI_EDITOR.md  TECHNICAL_SUMMARY.md  UI_AGNOSTIC_ARCHITECTURE.md  UI_CONVENTIONS_NOVELIST.md  USER_GUIDE.md  VSCODE_FORK_FEASIBILITY.md  VSCODE_FORK_REVISED_ANALYSIS.md
docs/adr/: ADR-003-tauri-reference-ui.md  (+7 more)
gtk-editor/: Cargo.toml
gtk-editor/src/: app.rs  main.rs  markdown.rs  project.rs  state.rs  ui.rs
linux/: Cargo.toml  README.md  build.rs
linux/qml/: Binder.qml  CompileDialog.qml  Editor.qml  FindReplace.qml  Inspector.qml  Main.qml  RevisionsPanel.qml  SettingsDialog.qml  Welcome.qml
linux/src/: bridge.rs  main.rs
macos/: Package.resolved  Package.swift  README.md
scripts/: check-nuget-package-versions.ps1  check-release-metadata.sh  create-release-source.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export_corn.rs  import_corn.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: document_commands.rs  mod.rs  project_commands.rs  scrivener_commands.rs  snapshot_commands.rs
src-tauri/src/commands/: ai.rs  convert.rs  document.rs  git.rs  io.rs  mod.rs  project.rs  search.rs  settings.rs  templates.rs  threads.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/project/: format.rs  hierarchy.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/core/snapshots/: create.rs  manifest.rs  mod.rs  prune.rs  restore.rs
src-tauri/src/models/: hierarchy.rs  mod.rs
src-tauri/src/scrivener/: mod.rs
src-tauri/src/scrivener/converter/: mod.rs
src-tauri/src/scrivener/exporter/: mod.rs
src-tauri/src/scrivener/parser/: mod.rs  rtf.rs  scrivx.rs
src-tauri/src/utils/: error.rs  fs.rs  slug.rs
swiftui-editor/: Package.swift
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
vscode-extension/: README.md  package-lock.json  package.json
windows/: ChickenScratch.slnx
(+265 files in other folders)
