[package]
name = "chickenscratch-linux"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
chickenscratch-core = { path = "../crates/core" }
chrono = "0.4"
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cxx-qt-build = "0.7"

[[bin]]
name = "chickenscratch-linux"
path = "src/main.rs"
