[package]
name = "chicken-scratch"
version = "0.1.0"
description = "Cross-platform distraction-free word processor for writers"
authors = ["Chicken Scratch Contributors"]
license = "MIT"
repository = "https://github.com/your-org/chicken-scratch"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Phase 2: Scrivener compatibility
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
# RTF parsing: Use Pandoc as external tool for Phase 2

# Snapshot compression
flate2 = "1.0"
tar = "0.4"

# Git operations (Phase 4)
# git2 = "0.19"

# AI providers (Phase 5)
# reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
