[package]
name = "chickenscratch"
version = "0.1.0"
edition = "2021"
description = "Chicken Scratch — cross-platform writing app"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chickenscratch-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
