[package]
name = "chickenscratch"
version = "0.1.0-alpha"
edition = "2021"
description = "ChickenScratch — cross-platform writing app"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chickenscratch-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
regex = "1"
rfd = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
