[package]
name = "chikn-converter"
version = "0.1.0-alpha"
edition = "2021"
description = "Convert between Scrivener (.scriv) and ChickenScratch (.chikn) formats"
license = "MIT"

[[bin]]
name = "chikn-converter"
path = "src/main.rs"

[dependencies]
chickenscratch-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
