[package]
name = "chickenscratch-core"
version = "1.0.0"
edition = "2021"
description = "Core library for ChickenScratch — .chikn format, Scrivener conversion, git integration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
git2 = "0.19"
tempfile = "3.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_Threading"] }
