[package]
name = "chickenscratch-tui"
version = "1.0.0"
edition = "2021"
description = "Terminal UI for ChickenScratch"
license = "MIT"

[[bin]]
name = "chikn"
path = "src/main.rs"

[dependencies]
chickenscratch-core = { path = "../core" }
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = "0.9"
pulldown-cmark = "0.12"
html2md = "0.2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serde_json = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3.8"
# Same version as chickenscratch-core: the status-line test builds a real
# mid-merge fixture and needs the repository's branch name.
git2 = "0.19"
